<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_60sdp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_roundedsq_white_withborder"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtMr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/_6sdp"
        android:text="@string/str_mr"
        android:textColor="@color/dark_text_color"
        android:textSize="@dimen/_12ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtMrs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/_6sdp"
        android:text="@string/str_mrs"
        android:textColor="@color/dark_text_color"
        android:textSize="@dimen/_12ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtMiss"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/_6sdp"
        android:text="@string/str_miss"
        android:textColor="@color/dark_text_color"
        android:textSize="@dimen/_12ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:padding="@dimen/_6sdp"
        android:text="@string/str_dr"
        android:textColor="@color/dark_text_color"
        android:textSize="@dimen/_12ssp" />

</LinearLayout>