<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/framLeftIconGroup"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_5sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iconLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/iconStar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:elevation="@dimen/_5sdp"
                android:text="@string/star"
                android:textColor="@color/black"
                android:visibility="invisible" />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/iconStar2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:elevation="@dimen/_5sdp"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            android:text="@string/star"
            android:textColor="@color/black"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_2sdp"
            android:drawableEnd="@drawable/ic_dropdown"

            android:gravity="center_vertical"
            android:text="@string/country_code"
            android:textColor="@color/dark_text_color"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:layout_gravity="start"
            android:textAlignment="viewStart"
            android:background="@null"
            android:hint="@string/hint_enter_mobile_no"
            android:maxLines="1"
            android:paddingTop="@dimen/_8sdp"
            android:paddingBottom="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="@dimen/_11ssp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:visibility="gone" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/black" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:maxLines="2"
        android:textDirection="anyRtl"
        android:paddingTop="@dimen/_3sdp"
        android:text="@string/error_enter_mobile"
        android:textColor="@color/colorError"
        android:textSize="@dimen/_11ssp"
        android:visibility="gone" />

</LinearLayout>